@startuml

class Competition {
   Long : competitionId
   LocalDate : date
}

class Team {
   Long : teamId
   String : teamName
   Competition : competition
}

class Player {
   Long : playerId
   String : name
   Team : team
}

class Phase {
   String : phaseName
   String : description
   Set<Node> : nodes
   Competition : competition
}

class Node {
   Long: nodeId
   Node : rightnode
   Node : leftNode
   Node : parentNode
'   Team : team1
'   Team : team2
   Match : match
   Phase : phase
}

class Match {
    Long : matchid
    Team : team1
    Team : team2
    int : pointsTeam1
    int : pointsTeam2
    Phase : phase
}

Competition "1" -right-> "*"  Team: has
Team "1" -right-> "*"  Player: has
Team "*" -up-> "*"  Phase: has
Phase "*" -down-> "1"  Competition: has
Node "*" --> "1"  Node: has
Node "*" --> "1"  Node: has
Node "*" --> "1"  Node: has
Phase "1" -right-> "*"  Node: has
Phase "1" -left> "*" Match
Node "*" -left> "1" Match

@enduml